Horizontal diagrams, UML class diagrams, typography overhaul, and permalink cleanup